--- a/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.html
+++ b/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.html
@@ -1,10 +1,12 @@
-<div class="sign-in-form-container">
-  <form [formGroup]="signInForm" (ngSubmit)="signIn()">
-    <legend>Sign-In</legend>
-    <label>Enter your email</label><br />
-    <input type="email" name="email" formControlName="email" /><br />
-    <label>Enter your password</label><br />
-    <input type="password" name="password" formControlName="password" /><br />
-    <input type="submit" value="log-in" />
-  </form>
-</div>
+<ng-container *ngIf="autoLogIn$ | async">
+  <div class="sign-in-form-container">
+    <form [formGroup]="signInForm" (ngSubmit)="signIn()">
+      <legend>Sign-In</legend>
+      <label>Enter your email</label><br />
+      <input type="email" name="email" formControlName="email" /><br />
+      <label>Enter your password</label><br />
+      <input type="password" name="password" formControlName="password" /><br />
+      <input type="submit" value="log-in" />
+    </form>
+  </div>
+</ng-container>
