Add material icon set

--- a/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.html
+++ b/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.html
@@ -1,3 +1,9 @@
 <div class="dialog-container">
+  <div class="header">
+    <div>{{ data ? data : "header" }}</div>
+    <div class="close-icon">
+      <app-icon (click)="close()">close</app-icon>
+    </div>
+  </div>
   <ng-content></ng-content>
 </div>
