--- a/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.scss
+++ b/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.scss
@@ -4,4 +4,13 @@
   max-width: 70vw;
   max-height: 70vh;
   background-color: aqua;
+
+  .header {
+    display: flex;
+    flex-direction: row;
+
+    .close-icon {
+      float: left;
+    }
+  }
 }
