Update default dialogs

--- a/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.html
+++ b/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-container">
   <div class="header">
-    <div>{{ data ? data : "header" }}</div>
+    <div class="title">{{ data.title }}</div>
     <div class="close-icon">
       <app-icon (click)="close()">close</app-icon>
     </div>
