--- a/web-app/online-calendar/src/app/shared/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/web-app/online-calendar/src/app/shared/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,3 +1,8 @@
 <app-base-dialog>
-  <div class="footer">footer</div>
+  <div class="footer">
+    <div class="button-container">
+      <button class="secondary-button">Cancel</button
+      ><button class="primary-button">OK</button>
+    </div>
+  </div>
 </app-base-dialog>
