--- a/web-app/online-calendar/src/app/shared/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/web-app/online-calendar/src/app/shared/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,7 +1,7 @@
 <app-base-dialog>
   <div class="footer">
     <div class="button-container">
-      <button class="secondary-button">Cancel</button
+      <button class="secondary-button" (click)="close()">Cancel</button
       ><button class="primary-button">OK</button>
     </div>
   </div>
