--- a/web-app/online-calendar/src/styles.scss
+++ b/web-app/online-calendar/src/styles.scss
@@ -1,6 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-
 @import "@angular/cdk/overlay-prebuilt.css";
+@import "colors";
 
 $color-primary: #4571c4;
 $text-color: #ffffff;
