--- a/web-app/online-calendar/src/app/shared/dialogs/confirm-dialog/confirm-dialog.component.scss
+++ b/web-app/online-calendar/src/app/shared/dialogs/confirm-dialog/confirm-dialog.component.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: flex-end;
   font-size: 1.5rem;
+  margin-top: 0.5rem;
 
   .button-container {
     display: flex;
