--- a/web-app/online-calendar/src/app/pages/calendar/components/add-appointment-dialog/add-appointment-dialog.component.html
+++ b/web-app/online-calendar/src/app/pages/calendar/components/add-appointment-dialog/add-appointment-dialog.component.html
@@ -5,7 +5,26 @@
         <h4>Name</h4>
         <div class="input-group input-group-icon">
           <input type="text" placeholder="" />
-          <div class="input-icon"><i class="fa fa-user"></i></div>
+          <div class="input-icon">
+            <app-icon>event</app-icon>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <h4>Address</h4>
+        <div class="input-group input-group-icon">
+          <input type="text" placeholder="" />
+          <div class="input-icon">
+            <app-icon>home</app-icon>
+          </div>
+        </div>
+        <div class="col-half">
+          <h4>Postal Code</h4>
+          <input type="text" placeholder="" />
+        </div>
+        <div class="col-half">
+          <h4>City</h4>
+          <input type="text" placeholder="" />
         </div>
       </div>
       <div class="row">
@@ -36,6 +55,12 @@
               <input type="text" placeholder="DD" />
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-group">
+          <input id="all-day" type="checkbox" />
+          <label for="all-day">All Day</label>
         </div>
       </div>
     </form>
