--- a/web-app/online-calendar/src/app/shared/icon/icon.component.html
+++ b/web-app/online-calendar/src/app/shared/icon/icon.component.html
@@ -1,1 +1,6 @@
-<div class="material-symbols-outlined icon"><ng-content></ng-content></div>
+<div
+  class="material-symbols-outlined icon"
+  [style.fontSize]="isAutoFontSize ? '1em' : '24px'"
+>
+  <ng-content></ng-content>
+</div>
