--- a/web-app/online-calendar/src/styles.scss
+++ b/web-app/online-calendar/src/styles.scss
@@ -1,11 +1,11 @@
 @import "@angular/cdk/overlay-prebuilt.css";
 @import "colors";
 
-$color-primary: #4571c4;
 $text-color: #ffffff;
 
 html,
 body {
+  height: 96.5%;
   font-family: Helvetica, sans-serif;
 }
 
