--- a/web-app/online-calendar/src/app/pages/calendar/calendar.component.scss
+++ b/web-app/online-calendar/src/app/pages/calendar/calendar.component.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 table,
 th,
 td,
@@ -24,6 +26,38 @@ th {
 table {
   width: 100%;
   position: relative;
+}
+
+.create-calendar-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  .create-calendar-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+
+    .primary-button {
+      display: flex;
+      text-align: center;
+      height: 5rem;
+      width: 5rem;
+      font-size: 4rem;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .label {
+      font-size: 1.5rem;
+      text-align: center;
+      width: 11rem;
+      color: $color-primary;
+    }
+  }
 }
 
 .calendar-container {
