--- a/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.html
+++ b/web-app/online-calendar/src/app/shared/dialogs/base-dialog/base-dialog.component.html
@@ -5,5 +5,7 @@
       <app-icon (click)="close()">close</app-icon>
     </div>
   </div>
-  <ng-content></ng-content>
+  <div class="dialog-content">
+    <ng-content></ng-content>
+  </div>
 </div>
