--- a/web-app/online-calendar/src/app/pages/calendar/calendar.component.html
+++ b/web-app/online-calendar/src/app/pages/calendar/calendar.component.html
@@ -1,41 +1,45 @@
 <ng-container
-  *ngIf="selectedCalendar$ | async as calendar; else createCalendar"
+  *ngIf="{
+    selectedCalendar: selectedCalendar$ | async,
+    calendars: calendars$ | async
+  } as data"
 >
-  <div class="calendar-picker">
-    <div class="switch" (click)="previousCalendar()">
-      <app-icon>arrow_left</app-icon>
-    </div>
-    <div class="calendar-name">{{ calendar.name }}</div>
-    <div class="switch" (click)="nextCalendar()">
-      <app-icon>arrow_right</app-icon>
-    </div>
-  </div>
-  <div class="calendar-container" #calendar>
-    <table>
-      <th class="sticky" *ngFor="let day of days">
-        {{ day }}
-      </th>
-      <tr *ngFor="let hour of hours; let h = index">
-        <ng-container *ngFor="let day of days; let d = index">
-          <td
-            [ngClass]="{ pointer: d }"
-            (click)="openAppointmentCreation(d, h)"
-          >
-            <div *ngIf="!d">{{ hour }}</div>
-          </td>
-        </ng-container>
-      </tr>
-    </table>
-  </div>
-</ng-container>
-
-<ng-template #createCalendar>
-  <div class="create-calendar-container">
-    <div class="create-calendar-wrapper">
-      <div class="primary-button" (click)="openCreateCalendarDialog()">
-        <app-icon [isAutoFontSize]="true">add_box</app-icon>
+  <ng-container *ngIf="data.selectedCalendar; else createCalendar">
+    <div class="calendar-picker">
+      <div class="switch" (click)="previousCalendar()">
+        <app-icon>arrow_left</app-icon>
       </div>
-      <div class="label">Create Calendar</div>
+      <div class="calendar-name">{{ data.selectedCalendar.name }}</div>
+      <div class="switch" (click)="nextCalendar()">
+        <app-icon>arrow_right</app-icon>
+      </div>
     </div>
-  </div>
-</ng-template>
+    <div class="calendar-container" #calendar>
+      <table>
+        <th class="sticky" *ngFor="let day of days">
+          {{ day }}
+        </th>
+        <tr *ngFor="let hour of hours; let h = index">
+          <ng-container *ngFor="let day of days; let d = index">
+            <td
+              [ngClass]="{ pointer: d }"
+              (click)="openAppointmentCreation(d, h)"
+            >
+              <div *ngIf="!d">{{ hour }}</div>
+            </td>
+          </ng-container>
+        </tr>
+      </table>
+    </div>
+  </ng-container>
+
+  <ng-template #createCalendar>
+    <app-create-calendar
+      [calendars]="data.calendars"
+      (selectCalendar)="selectCalendar($event)"
+      (createCalendar)="openCreateCalendarDialog()"
+      (editCalendar)="openEditCalendarDialog($event)"
+      (removeCalendar)="openRemoveCalendarDialog($event)"
+    ></app-create-calendar>
+  </ng-template>
+</ng-container>
