--- a/web-app/online-calendar/src/styles.scss
+++ b/web-app/online-calendar/src/styles.scss
@@ -1,6 +1,7 @@
 @import "@angular/cdk/overlay-prebuilt.css";
 @import "colors";
 @import "buttons";
+@import "appointment";
 
 $text-color: #ffffff;
 
