--- a/web-app/online-calendar/src/app/pages/calendar/calendar.component.html
+++ b/web-app/online-calendar/src/app/pages/calendar/calendar.component.html
@@ -5,32 +5,12 @@
   } as data"
 >
   <ng-container *ngIf="data.selectedCalendar; else createCalendar">
-    <div class="calendar-picker">
-      <div class="switch" (click)="previousCalendar()">
-        <app-icon>arrow_left</app-icon>
-      </div>
-      <div class="calendar-name">{{ data.selectedCalendar.name }}</div>
-      <div class="switch" (click)="nextCalendar()">
-        <app-icon>arrow_right</app-icon>
-      </div>
-    </div>
-    <div class="calendar-container" #calendar>
-      <table>
-        <th class="sticky" *ngFor="let day of days">
-          {{ day }}
-        </th>
-        <tr *ngFor="let hour of hours; let h = index">
-          <ng-container *ngFor="let day of days; let d = index">
-            <td
-              [ngClass]="{ pointer: d }"
-              (click)="openAppointmentCreation(d, h)"
-            >
-              <div *ngIf="!d">{{ hour }}</div>
-            </td>
-          </ng-container>
-        </tr>
-      </table>
-    </div>
+    <app-calendar-picker
+      [selectedCalendar]="data.selectedCalendar"
+    ></app-calendar-picker>
+    <app-current-calendar
+      [appointments]="appointments$ | async"
+    ></app-current-calendar>
   </ng-container>
 
   <ng-template #createCalendar>
