--- a/web-app/online-calendar/src/app/pages/calendar/components/add-appointment-dialog/add-appointment-dialog.component.html
+++ b/web-app/online-calendar/src/app/pages/calendar/components/add-appointment-dialog/add-appointment-dialog.component.html
@@ -165,6 +165,15 @@
           <label for="all-day">All Day</label>
         </div>
       </div>
+      <div class="row">
+        <h4>Comment</h4>
+        <div class="input-group input-group-icon">
+          <input type="text" formControlName="comment" placeholder="" />
+          <div class="input-icon">
+            <app-icon>comment</app-icon>
+          </div>
+        </div>
+      </div>
     </form>
     <div class="footer">
       <div class="button-container">
