--- a/web-app/online-calendar/src/app/layout/nav-bar/nav-bar.component.scss
+++ b/web-app/online-calendar/src/app/layout/nav-bar/nav-bar.component.scss
@@ -16,6 +16,7 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 /* Change the link color to #111 (black) on hover */
