--- a/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.scss
+++ b/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.scss
@@ -1,6 +1,17 @@
+@import "inputs";
+@import "colors";
+
 .sign-in-form-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 50px);
+}
+
+.button {
+  background-color: $color-primary;
+
+  &:hover {
+    background-color: darken($color-primary, 10%);
+  }
 }
