Navigation between sign up and sign in

--- a/web-app/online-calendar/src/app/pages/sign-up/sign-up.component.html
+++ b/web-app/online-calendar/src/app/pages/sign-up/sign-up.component.html
@@ -64,4 +64,7 @@
       value="Sign Up"
     />
   </form>
+  <h4 class="navigate-button" (click)="navigateToSignIn()">
+    Navigate to Sign In
+  </h4>
 </div>
