--- a/web-app/online-calendar/src/styles/buttons.scss
+++ b/web-app/online-calendar/src/styles/buttons.scss
@@ -2,6 +2,7 @@
   padding: 10px;
   border-radius: 6px;
   font-weight: 600;
+  transition: background-color 0.25s ease;
   cursor: pointer;
 
   &:hover {
