--- a/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.html
+++ b/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.html
@@ -37,5 +37,8 @@
         value="Sign In"
       />
     </form>
+    <h4 class="navigate-button" (click)="navigateToSignUp()">
+      Navigate to Sign Up
+    </h4>
   </div>
 </ng-container>
