--- a/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.scss
+++ b/web-app/online-calendar/src/app/pages/sign-in/sign-in.component.scss
@@ -3,15 +3,28 @@
 
 .sign-in-form-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 50px);
 }
 
 .button {
+  transition: background-color 0.25s ease;
   background-color: $color-primary;
 
   &:hover {
     background-color: darken($color-primary, 10%);
+  }
+}
+
+.navigate-button {
+  margin-top: 0.5rem;
+  color: $color-primary;
+  transition: color 0.25s ease;
+  cursor: pointer;
+  &:hover {
+    color: darken($color-primary, 10%);
+    text-decoration: underline;
   }
 }
