--- a/web-app/online-calendar/src/app/pages/calendar/components/create-calendar/create-calendar.component.scss
+++ b/web-app/online-calendar/src/app/pages/calendar/components/create-calendar/create-calendar.component.scss
@@ -15,6 +15,14 @@
   color: $text-color;
 }
 
+.menu-item {
+  display: flex;
+
+  app-icon {
+    margin-right: 0.5rem;
+  }
+}
+
 .create-calendar-container {
   display: flex;
   flex-direction: column;
