Add participants to appointments

--- a/web-app/online-calendar/src/app/pages/calendar/components/add-appointment-dialog/add-appointment-dialog.component.html
+++ b/web-app/online-calendar/src/app/pages/calendar/components/add-appointment-dialog/add-appointment-dialog.component.html
@@ -11,6 +11,14 @@
         </div>
       </div>
       <div class="row">
+        <h4>Add users</h4>
+        <app-user-selector
+          [selectedUsers]="createAppointmentForm.value.users"
+          (selectedUsersEventEmitter)="selectUser($event)"
+          (removeUserEventEmitter)="removeUser($event)"
+        ></app-user-selector>
+      </div>
+      <div class="row">
         <h4>Address</h4>
         <div class="input-group input-group-icon">
           <input type="text" formControlName="address" placeholder="" />
