--- a/web-app/online-calendar/src/app/pages/calendar/components/user-selector/user-selector.component.scss
+++ b/web-app/online-calendar/src/app/pages/calendar/components/user-selector/user-selector.component.scss
@@ -21,11 +21,11 @@
     border: 1px solid $color-primary;
     background-color: $text-color;
     border-radius: 0 0 4px 4px;
+    z-index: 1000000;
 
     .user-item {
       flex: 1;
       padding: 0.5rem;
-      z-index: 100;
       cursor: pointer;
 
       &:hover {
